--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personalprofile",
-  "homepage": "https://ffmkx215.github.io/profile",
+  "homepage": "https://ffmkx215.github.io/gh-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
